; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/net/extr_qeth_l3_main.c_qeth_l3_softsetup_ipv6.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/net/extr_qeth_l3_main.c_qeth_l3_softsetup_ipv6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qeth_card = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"softipv6\00", align 1
@IPA_IPV6 = common dso_local global i32 0, align 4
@IPA_CMD_ASS_START = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"Activating IPv6 support for %s failed\0A\00", align 1
@IPA_PASSTHRU = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [45 x i8] c"Enabling the passthrough mode for %s failed\0A\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"IPV6 enabled\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qeth_card*)* @qeth_l3_softsetup_ipv6 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qeth_l3_softsetup_ipv6(%struct.qeth_card* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.qeth_card*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.qeth_card* %0, %struct.qeth_card** %3, align 8
  store i32 3, i32* %4, align 4
  %6 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %7 = call i32 @QETH_CARD_TEXT(%struct.qeth_card* %6, i32 3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %9 = call i64 @IS_IQD(%struct.qeth_card* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %61

12:                                               ; preds = %1
  %13 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %14 = load i32, i32* @IPA_IPV6, align 4
  %15 = load i32, i32* @IPA_CMD_ASS_START, align 4
  %16 = call i32 @qeth_send_simple_setassparms(%struct.qeth_card* %13, i32 %14, i32 %15, i32* %4)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %12
  %20 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %21 = getelementptr inbounds %struct.qeth_card, %struct.qeth_card* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %25 = call i32 @QETH_CARD_IFNAME(%struct.qeth_card* %24)
  %26 = call i32 @dev_err(i32* %23, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* %5, align 4
  store i32 %27, i32* %2, align 4
  br label %67

28:                                               ; preds = %12
  %29 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %30 = load i32, i32* @IPA_IPV6, align 4
  %31 = load i32, i32* @IPA_CMD_ASS_START, align 4
  %32 = call i32 @qeth_send_simple_setassparms_v6(%struct.qeth_card* %29, i32 %30, i32 %31, i32* null)
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %44

35:                                               ; preds = %28
  %36 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %37 = getelementptr inbounds %struct.qeth_card, %struct.qeth_card* %36, i32 0, i32 0
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %41 = call i32 @QETH_CARD_IFNAME(%struct.qeth_card* %40)
  %42 = call i32 @dev_err(i32* %39, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i32 %41)
  %43 = load i32, i32* %5, align 4
  store i32 %43, i32* %2, align 4
  br label %67

44:                                               ; preds = %28
  %45 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %46 = load i32, i32* @IPA_PASSTHRU, align 4
  %47 = load i32, i32* @IPA_CMD_ASS_START, align 4
  %48 = call i32 @qeth_send_simple_setassparms_v6(%struct.qeth_card* %45, i32 %46, i32 %47, i32* null)
  store i32 %48, i32* %5, align 4
  %49 = load i32, i32* %5, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %60

51:                                               ; preds = %44
  %52 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %53 = getelementptr inbounds %struct.qeth_card, %struct.qeth_card* %52, i32 0, i32 0
  %54 = load %struct.TYPE_2__*, %struct.TYPE_2__** %53, align 8
  %55 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %54, i32 0, i32 0
  %56 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %57 = call i32 @QETH_CARD_IFNAME(%struct.qeth_card* %56)
  %58 = call i32 @dev_warn(i32* %55, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0), i32 %57)
  %59 = load i32, i32* %5, align 4
  store i32 %59, i32* %2, align 4
  br label %67

60:                                               ; preds = %44
  br label %61

61:                                               ; preds = %60, %11
  %62 = load %struct.qeth_card*, %struct.qeth_card** %3, align 8
  %63 = getelementptr inbounds %struct.qeth_card, %struct.qeth_card* %62, i32 0, i32 0
  %64 = load %struct.TYPE_2__*, %struct.TYPE_2__** %63, align 8
  %65 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %64, i32 0, i32 0
  %66 = call i32 @dev_info(i32* %65, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %67

67:                                               ; preds = %61, %51, %35, %19
  %68 = load i32, i32* %2, align 4
  ret i32 %68
}

declare dso_local i32 @QETH_CARD_TEXT(%struct.qeth_card*, i32, i8*) #1

declare dso_local i64 @IS_IQD(%struct.qeth_card*) #1

declare dso_local i32 @qeth_send_simple_setassparms(%struct.qeth_card*, i32, i32, i32*) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1

declare dso_local i32 @QETH_CARD_IFNAME(%struct.qeth_card*) #1

declare dso_local i32 @qeth_send_simple_setassparms_v6(%struct.qeth_card*, i32, i32, i32*) #1

declare dso_local i32 @dev_warn(i32*, i8*, i32) #1

declare dso_local i32 @dev_info(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
